--- a/css/components.css
+++ b/css/components.css
@@ -37,6 +37,20 @@
   text-align: center;
 }
 
+.inter-bold {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.inter-light {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
 /*--HEADER----*/
 
 /*--socials--*/
