--- a/css/p-accueil.css
+++ b/css/p-accueil.css
@@ -1,4 +1,4 @@
-/*--banniere de bienvenue--*/
+/*--Banniere de bienvenue--*/
 .banniere-container {
   margin: 0;
 }
@@ -8,39 +8,23 @@
   z-index: 0;
   position: relative;
 }
-/*  */
-.header-img {
+
+/*--Wraps--*/
+
+/* first */
+.wrap1 {
+  display: flex;
+  flex-direction: row;
   position: relative;
-  width: 100%;
-  height: 70vh; /* La hauteur occupe 70% de l'écran, le header fait 30% */
   overflow: hidden;
+  justify-content: flex-start;
+  align-items: center;
+  max-width: 100vw;
+  min-height: 250px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
-
-.header-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* Pour que l'image occupe tout l'espace sans être déformée */
-  filter: brightness(60%) sepia(20%) hue-rotate(-10deg) saturate(150%);
-  /* Ajuster les valeurs des filtres si besoin */
-}
-
-.header-img .overlay-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-  font-size: 2rem;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-  font-weight: bold;
-  text-align: center;
-  padding: 10px 20px;
-  background: rgba(100, 10, 52, 0.7); /* Utilise le #640a34 avec de la transparence */
-  border-radius: 8px;
-}
-
-/*  */
-.img1 {
+.pattern1 {
   margin-top: 1vh;
   border-radius: 0 500px 500px 0;
   filter: brightness(0.5) saturate(1.5) hue-rotate(-10deg);
@@ -54,12 +38,36 @@
   height: 40vw;
   margin-left: -1px;
   position: relative;
-  inset: auto auto auto 0%;
-  overflow: hidden;
   box-shadow: 45px 0 80px -6px #00000036;
 }
+.new-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  height: 100%;
+}
+.resnonverba {
+  margin-top: 10%;
+  width: 70%;
+  height: auto;
+  max-height: 70%;
+}
 
-.img2 {
+/* second */
+.wrap2 {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  overflow: hidden;
+  justify-content: flex-end;
+  align-items: center;
+  max-width: 100vw;
+  min-height: 250px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.pattern2 {
   filter: brightness(0.5) saturate(1.5) hue-rotate(-10deg);
   object-fit: cover;
   object-position: 0% 100%;
@@ -76,23 +84,6 @@
   box-shadow: 45px 0 80px -6px #00000036;
   transform: scaleY(-1);
 }
-
-.wrap1 {
-  flex-direction: row;
-  padding-top: 250px;
-  padding-bottom: 250px;
-  position: relative;
-  overflow: visible;
-  justify-content: flex-start;
-  align-items: center;
-  max-width: 100vw;
-  min-height: 250px;
-  padding-top: 100px;
-  padding-bottom: 100px;
-  display: flex;
-  overflow: hidden;
-}
-
 .text-wrap {
   flex-direction: row;
   justify-content: space-between;
