main page design

--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@font-face {
+  font-family: "Futura Condensed Extra Bold";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Futura Condensed Extra Bold"), url("../fonts/Futura\ Condensed\ Extra\ Bold.woff") format("woff");
+}
 
 :root {
   --main-color: #640a34;
