--- a/css/base.css
+++ b/css/base.css
@@ -27,8 +27,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-  list-style: none;
-  font-family: "", sans-serif;
+  font-family: "Inter", sans-serif;
   scroll-behavior: smooth;
   box-sizing: border-box;
   text-align: justify;
